--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
             <version>1.2.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
     </dependencies>
 
 
